fix alignment section intro

--- a/css/style.css
+++ b/css/style.css
@@ -147,19 +147,22 @@ hr {
 }
 /* Intro */
 #intro {
-	display: table;
 	width: 100%;
-	padding: 5% 0;
+	padding-top: 2em;
 	text-align: center;
 	color: #fff;
 	background-color: #B39849;
-    height:100%;
+    min-height:100%;
 }
-#intro .intro-body {
-	display: table-cell;
-	vertical-align: middle;
+#intro .container {
+	width: 100%;
 }
-#intro .intro-body h1 {
+#intro .row {
+	margin: auto;
+	width: 100%;
+}
+
+#intro h1 {
 	font-size: 76px;
 	font-weight: 700;
 	color: #78C9BC;
@@ -168,17 +171,16 @@ hr {
 	margin-top: 50px;
 }
 
-#intro .intro-body .intro-text {
-	font-size: 18px;
-}
-#intro .img {
+
+#intro img {
     text-align: center;
+	margin-bottom: 5%;
 }
 #intro img {
     display: inline-block;
     padding-top: 5px;
 }
-#intro .intro-body .intro-text {
+#intro .intro-text {
 	font-size: 30px;
 	letter-spacing: 1px;
 	margin-bottom: 60px;
@@ -576,8 +578,8 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 }
 
 @media (max-width: 640px) {
-#intro .intro-body H1 {
-	font-size: 5em;
+#intro h1 {
+	font-size: 3em;
 }
 }
 
